<resources>

    <string name="app_name">MateriActivity10</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Materi Activity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="tutup">Tutup</string>
    <string name="form_login">Form Login</string>
    <string name="title_activity_success">SuccessActivity</string>
    <string name="title_activity_failed">FailedActivity</string>

</resources>